<resources>


    <string name="i_m_an_admin">I\'m an Admin</string>
    <string name="i_m_not_an_admin">I\'m not an admin</string>
    <string name="login_btn">LogIn</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me_chkBox">Remember me</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="hve_acc_log_in">Already have an Account?Log in</string>
    <string name="join_now">Join Now</string>
    <string name="Register_btn">Create Account</string>
    <string name="User_name">Name</string>
    <string name="close_btn">Close</string>
    <string name="update_btn">Update</string>
    <string name="profile_img_change_btn"> Change profile Picture</string>
    <string name="title_activity_home">HomeActivity</string>









    <string name="app_name">ONLINE ගැමිරස</string>
    <string name="banana_leave_rice_and_curries_lkr_420_00">Banana leave rice and curries LKR 420.00</string>
    <string name="order_now1">ORDER NOW</string>
    <string name="select1">Select</string>
    <string name="cashew_with_rice_and_curries_lkr_680_00">Cashew with rice and curries LKR 680.00</string>
    <string name="select2">Select</string>
    <string name="cumin_white_rice_with_curries_lkr_560_00">Cumin white rice with curries. LKR : 560.00</string>
    <string name="order_now3">ORDER NOW</string>
    <string name="select3">Select</string>
    <string name="garlic_ghee_rice_with_curries_lkr_640_00">Garlic ghee rice with curries LKR 640.00</string>
    <string name="kurakkan_idiappa_lkr_250_00">Kurakkan idiappa LKR 250.00</string>
    <string name="order_now4">ORDER NOW</string>
    <string name="select5">Select</string>
    <string name="imbul_kiribath_lkr110_00">Imbul kiribath LKR110.00</string>
    <string name="order_now6">ORDER NOW</string>
    <string name="select7">Select</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="kurakkan_pittu_lkr170_00">Kurakkan pittu LKR170.00</string>
    <string name="order_now8">ORDER NOW</string>
    <string name="rathu_bath_with_curries_lkr320_00">Rathu bath with curries LKR320.00</string>
    <string name="select9">Select</string>
    <string name="traditional_rice_and_curries_lkr_510_00">Traditional rice and curries LKR 510.00</string>
    <string name="order_now10">ORDER NOW</string>
    <string name="kurakkan_roti_lkr_110_00">Kurakkan roti LKR 110.00</string>
    <string name="order_now11">ORDER NOW</string>
    <string name="special_rice_with_7_curries_lkr_720_00">Special rice with 7 curries LKR 720.00</string>
    <string name="order_now12">ORDER NOW</string>
    <string name="select12">Select</string>
    <string name="traditional_white_rice_with_curries_lkr_660_00">Traditional white rice with curries LKR 660.00</string>
    <string name="order_now13">ORDER NOW</string>
    <string name="select14">Select</string>
    <string name="traditional_yellow_rice_with_curries_lkr_490_00">Traditional yellow rice with curries LKR 490.00</string>
    <string name="select15">Select</string>
    <string name="traditional_yellow_rice_with_curries_lkr_590_00">Traditional yellow rice with curries LKR 590.00</string>
    <string name="select16">Select</string>
    <string name="yellow_rice_with_special_curries_lkr790_00">Yellow rice with special curries LKR790.00</string>
    <string name="kurakkan_roti">Kurakkan Roti</string>
    <string name="kurakkan_pittu">Kurakkan Pittu</string>
    <string name="kurakkan_idiappa">Kurakkan Idiappa</string>
    <string name="imbul_kiribath">Imbul Kiribath</string>
    <string name="bathu_bath_with_curries">Bathu bath with curries</string>
    <string name="cashew_with_rice_and_curries">Cashew with rice and curries</string>
    <string name="traditional_white_rice_with_curries">Traditional white rice with curries</string>
    <string name="yellow_rice_with_special_curries">Yellow rice with special curries</string>
    <string name="banana_leave_rice_and_curries">Banana leave rice and curries</string>
    <string name="special_rice_with_7_curries">Special rice with 7 curries</string>
    <string name="select18">Select18</string>
    <string name="imbul_kiribath_110_00">Imbul kiribath 110.00</string>
    <string name="select19">Select19</string>
    <string name="traditonal_yellow_rice_with_curries">Traditonal yellow rice with curries</string>
    <string name="cumin_white_rice_with_curries">Cumin white rice with curries</string>
    <string name="garlic_ghee_rice_with_curries">Garlic Ghee rice with Curries</string>
    <string name="traditional_yellow_rice_with_curries">Traditional yellow rice with curries</string>
    <string name="traditional_rice_and_curries">Traditional Rice and curries</string>
    <string name="select11">Select</string>
    <string name="select10">Select</string>
    <string name="order_now14">ORDER NOW</string>
    <string name="order_now15">ORDER NOW</string>
    <string name="order_now9">ORDER NOW</string>
    <string name="order_now7">ORDER NOW</string>
    <string name="select8">Select</string>
    <string name="order_now5">ORDER NOW</string>
    <string name="yellow_rice_with_special_curries_lkr_790_00">Yellow rice with special curries LKR 790.00</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="table">Table</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="online">ONLINE ගැමිරස</string>
</resources>