<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:alignmentMode="alignMargins"
                    android:columnCount="1"
                    android:rowCount="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="2"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:background="@drawable/break_1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">


                            <Button
                                android:id="@+id/button"
                                android:layout_width="160dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="breakfast"
                                android:text="@string/breakfast"
                                app:cornerRadius="15sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:background="@drawable/lun"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">


                            <Button
                                android:id="@+id/button2"
                                android:layout_width="160dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="lunch"
                                android:text="@string/lunch"
                                app:cornerRadius="15sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:background="@drawable/dinn"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">


                            <Button
                                android:id="@+id/button3"
                                android:layout_width="160dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"

                                android:onClick="dinner"
                                android:text="@string/dinner"
                                app:cornerRadius="15sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>





                </GridLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>