<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".breakfast">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:rowCount="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="100dp"
                                android:src="@drawable/ro2" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="roti"
                                android:text="@string/kurakkan_roti"
                                app:cornerRadius="15sp" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="100dp"
                                android:src="@drawable/s2" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="pittu"
                                android:text="@string/kurakkan_pittu"
                                app:cornerRadius="15sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="100dp"
                                android:src="@drawable/s3" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="idiappa"
                                android:text="@string/kurakkan_idiappa"
                                android:textSize="14sp"
                                app:cornerRadius="15sp" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="100dp"
                                android:src="@drawable/k1" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="kiribath"
                                android:text="@string/imbul_kiribath"
                                app:cornerRadius="15sp" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="100dp"
                                android:src="@drawable/rq1" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:backgroundTint="@color/teal_700"
                                android:onClick="rathu"
                                android:text="@string/rathu_bath_with_curries"
                                android:textSize="13sp"
                                app:cornerRadius="15sp" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>





                </GridLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>